@startuml

legend Le paquetage model.

hide empty members

package model {

    abstract class Personne {
        -id: String {readOnly}
        -nom: String

        +statut(): String
        +afficherStatut(): void
        +{abstract}toString(): String
    }

    class Patient extends Personne {
        -dateNaissance: LocalDate
        -prenom: String

        +<<constructor>>Patient(id: String, nom: String, prenom: String, dateNaissance: LocalDate)
        +marquerFacturePaye(facture: Facture) : void
        +afficherEtatFactures(): String *
        +afficherHistoriqueMedical(): String *
    }


    class Medecin extends Personne {
        -specialisation: String

        +<<constructor>>Medecin(id: String, nom: String, specialisation: String)
    }

    class RendezVous {
        -id: String
        -motif: String
        -prix: double
        -feedback: String
        -diagnostic: String
        -dateHeure: LocalDateTime

        +<<constructor>>RendezVous(id: String, patient: Patient, motif: int, medecin: Medecin, dateHeure: LocalDateTime)
        +toString(): String
        +enregistrerVisite(): void
    }

    class Ordonnance {
        -id: String

        +prescrire(medicament Medicament): void
        +afficherMedicaments(): String
        +toString(): String
    }

    class Medicament {
        -nom: String
        -nombreJours: int
        -posologie: int

        +<<constructor>>Medicament(nom: String, nombreJours: int, posologie: int)
        +toString(): String
    }

    class Facture {
        -id: String
        -details: String
        -coutTotal: double
        -payee: boolean

        +<<constructor>>Facture(id: String, details: String, coutTotal: double)
        +payer(): void
        -calculerCoutTotal(): void
    }

    class Hopital {

        +ajouterMedecin(medecin: Medecin): void
        +ajouterPatient(patient: Patient): void
        +afficherMedecins(): String
        +afficherPatients(): String
    }

    class HistoriqueMedical {
        +<<constructor>>HistoriqueMedical("-historiqueRendezVous: RendezVous")
        +ajouterRendezVous(rendezVous: RendezVous): void
    }

    enum GroupeSanguin {
        A_POSITIF
        A_NEGATIF
        B_POSITIF
        B_NEGATIF
        AB_POSITIF
        AB_NEGATIF
        O_POSITIF
        O_NEGATIF
    }

    Patient --> "-factures *" Facture
    Patient --> "-groupeSanguin 1" GroupeSanguin
    Patient --> "-historiqueMedical 1" HistoriqueMedical

    Medecin --> "-listeRendezVous *" RendezVous

    RendezVous o-- "-medecin 1" Medecin
    RendezVous o-- "-patient 1" Patient
    RendezVous --> "-ordonnance 1" Ordonnance

    Ordonnance o-- "-medicaments 1..*" Medicament

    Hopital o-- "-medecin *" Medecin
    Hopital o-- "-patient *" Patient

    HistoriqueMedical o-- "-historiqueRendezVous *" RendezVous

    Facture o-- "-rendezVous 1..*" RendezVous
}

@enduml